--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
   <link rel="icon" type="image/jpeg" href="/icon.jpg" />
 
   <link rel="apple-touch-icon" href="/icon.jpg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>Vialert EC - Monitor Vial</title>
 </head>
